# webrtc

./: CMakeLists.txt  README.md  active-test.html  active.cpp  index.js  license.txt  package.json  passive.cpp
microstack/: CMakeLists.txt  ILibAsyncServerSocket.c  ILibAsyncServerSocket.h  ILibAsyncSocket.c  ILibAsyncSocket.h  ILibAsyncUDPSocket.c  ILibAsyncUDPSocket.h  ILibCrypto.c  ILibCrypto.h  ILibLMS-WebSite.h  ILibLMS.c  ILibLMS.h  ILibParsers.c  ILibParsers.h  ILibProcessPipe.c  ILibProcessPipe.h  ILibRemoteLogging.c  ILibRemoteLogging.h  ILibSimpleDataStore.c  ILibSimpleDataStore.h  ILibWebClient.c  ILibWebClient.h  ILibWebRTC.c  ILibWebRTC.h  ILibWebServer.c  ILibWebServer.h  ILibWrapperWebRTC.c  ILibWrapperWebRTC.h  SHA256.c  md5.c  sha1.c  sha1.h  sha256.h
original-sample/C Sample/: SimpleRendezvousServer.c  WebRTC MicroStackSample.vcxproj  WebRTC MicroStackSample.vcxproj.filters  WebRTC_MicroStackSample.c
original-sample/C# Sample/: DebugForm.Designer.cs  FormExtensions.cs  MainForm.cs  Program.cs  SessionForm.cs  SessionForm.resx  SimpleRendezvousServer.cs  StunSettingsForm.Designer.cs  WebRTC Sample.csproj  WebRTC.cs  WebRTC.filters  resource.h  webrtcsample.html
original-sample/C# Sample/Properties/: Resources.resx
webrtc/: WebRTC CSharp Sample.sln  WebRTC MicroStackSample.sln
webrtc/C Sample/: SimpleRendezvousServer.h  makefile
webrtc/C# Sample/: DebugForm.cs  MainForm.Designer.cs  MainForm.resx  ReadMe.txt  SessionForm.Designer.cs  StunSettingsForm.cs  WebRTC.cpp  WebRTC.h  WebRTC.vcxproj  WebRTC.vcxproj.filters  stdafx.cpp
webrtc/C# Sample/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
